# OpenGL

./: CMakeLists.txt  readME  readME.md
SOIL/: CMakeLists.txt
include/: fragment.frag  fragmentearth.frag  gl_app.hpp  gl_common.hpp  gl_model.hpp  gl_shader.hpp  gl_texture.hpp  gl_texvaovbo.hpp  gl_window.hpp  vertex.vert  vertexearth.vert
src/: main.cpp
